Added ability to group multiple elements in a boxline